# PythonDS1

./: .gitignore  notes  pyproject.toml  requirements.txt  steps to uv.txt  test.ipynb
1-Python Basics/: 1.0-basic.ipynb  1.1-Variables.ipynb  1.3-operators.ipynb  test.py
1-Python Basics/Test/: Test.py
10-Data Analysis With Python/: 10.1-numpy.ipynb  10.2-pandas.ipynb  Matplotlib-code-files.ipynb  linearalgebra.ipynb  numpy.ipynb  pandas.ipynb
1freedom/: Week8_Python+Langchain_Mastery_03rd_Aug_25.ipynb
2-Control Flow/: Loops.ipynb
3-Data Structures/: 3.1-Lists.ipynb  3.1.1-ListExamples.ipynb  3.2-Tuples.ipynb  notes
4-Functions/: 4.3-Lambda.ipynb
5-Modules/: 5.1-import.ipynb
6-File Handling/: 6.1-fileoperation.ipynb  6.2-filepath.ipynb
7-Exception Handling/: 7.1-exception.ipynb
8-Class And Objects/: 8.1-oops.ipynb  8.2-inheritance.ipynb  8.3-Polymorphism.ipynb  8.4-Encapsulation.ipynb  8.7-OperatorOverloading.ipynb  notes.txt
9-Advance Python Concepts/: 9.1-Iterators.ipynb  9.3-Decorators.ipynb  mynotes.docx  notes.md  notes.txt
mslearn-ai-language/Labfiles/01-analyze-text/Python/text-analysis/: text-analysis.py
mslearn-ai-language/Labfiles/07-speech/Python/speaking-clock/: speaking-clock.py
mslearn-ai-language/Labfiles/09-audio-chat/Python/: .env  audio-chat.py
mslearn-ai-vision/Labfiles/analyze-images/python/image-analysis/: image-analysis.py
mslearn-ai-vision/Labfiles/face/python/: readme.txt
mslearn-ai-vision/Labfiles/image-classification/python/: readme.txt
mslearn-ai-vision/Labfiles/ocr/python/: readme.txt
(+3 files in other folders)
