[project]
name = "demouv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "memory-profiler>=0.61.0",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "streamlit>=1.46.0",
]
